I don't think the stupid strategy works anymore

--- a/run_backtester.ipynb
+++ b/run_backtester.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vincent v0.0.65\n",
-      "  Row: Pandas(Index=0, ts_recv='2024-01-02T14:30:02.402838204Z', instrument_id=587228771, bid_px_00=27.0, ask_px_00=27.7, bid_sz_00=174, ask_sz_00=155, symbol='SPX   240119P04700000', expiration=Timestamp('2024-01-19 00:00:00'), option_type='P', strike_price=4700.0, day='2024-01-02')\n",
-      "Order: {'datetime': '2024-01-02T14:30:02.402838204Z', 'option_symbol': 'SPX   240119P04700000', 'action': 'B', 'order_size': 1}\n",
-      "Order: {'datetime': '2024-01-02T14:30:02.402838204Z', 'option_symbol': 'SPX   240119P04700000', 'action': 'S', 'order_size': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "from backtester import Backtester\n",
@@ -24,9 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Strategy.__init__() missing 2 required positional arguments: 'options_data' and 'underlying'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m start \u001b[38;5;241m=\u001b[39m datetime(\u001b[38;5;241m2024\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      2\u001b[0m end \u001b[38;5;241m=\u001b[39m datetime(\u001b[38;5;241m2024\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m30\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[43mStrategy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m b \u001b[38;5;241m=\u001b[39m Backtester(start, end, s)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Strategy.__init__() missing 2 required positional arguments: 'options_data' and 'underlying'"
+     ]
+    }
+   ],
    "source": [
     "start = datetime(2024, 1, 1)\n",
     "end = datetime(2024, 3, 30)\n",
